Fix diet wrapping issue

--- a/web-service/components/css/DayBox.module.css
+++ b/web-service/components/css/DayBox.module.css
@@ -42,6 +42,7 @@
   box-shadow: 17px 17px 32px #00000025, -17px -17px 32px #00000009;
 }
 
+
 .date {
   color: var(--ui-text-not-important);
   font-weight: 500;
@@ -62,19 +63,25 @@
   overflow-wrap: normal;
 }
 
+.food-diets {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: .5em;
+}
+
 .diet {
   position: relative;
+  display: inline-block;
   background: var(--brand-primary);
-  margin-left: .5em;
   border-radius: 10px;
-
-  padding: 1px 4px 1px 4px;
+  padding: 1px 4px;
   font-size: small;
   font-weight: bold;
   color: white;
   user-select: none;
   cursor: pointer;
 }
+
 
 .diet:hover .dietTooltip {
   transform: translateX(-50%) scale(1);
